# avobjectdetection

./: .gitignore  CMakeLists.txt  anchors.py  boxes1.json  kitti.py  loss.py  model.py  preprocess.py  train.py  utils.py
ops/: CMakeLists.txt
